k8s/2-postgredb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres-pod  
  template:
    metadata:
      labels:
        app: postgres-pod    
    spec:
      containers:
        - name: postgres
          image: "postgres:14-alpine"
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: postgres-storage
      volumes: 
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc              
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres-pod
  ports:
  - port: 5432
    targetPort: 5432
