k8s/3-k8s-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-api-service
  labels:
    app: k8s-api
spec:
  type: NodePort
  selector:
    app: k8s-api
  ports:
    - protocol: TCP
      name: k8s-api-port-mapping
      port: 8080
      targetPort: 8080
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-api
  labels:
    app: k8s-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-api
  template:
    metadata:
      labels:
        app: k8s-api
    spec:
      containers:
      - image: sbouhaddi/k8s-api
        name: k8s-api
        ports: 
          - containerPort: 8080
