k8s/4-k8s-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-ui-service
  labels:
    app: k8s-ui
spec:
  type: NodePort
  selector:
    app: k8s-ui
  ports:
    - protocol: TCP
      name: k8s-ui-port-mapping
      port: 3000
      targetPort: 3000
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ui
  labels:
    app: k8s-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-ui
  template:
    metadata:
      labels:
        app: k8s-ui
    spec:
      containers:
      - image: sbouhaddi/k8s-nextjs
        name: k8s-api
        ports: 
          - containerPort: 3000
