k8s/5-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
         paths:
         - pathType: Prefix
           path: /k8s-api(/|$)(.*)
           backend:
             service:
               name: k8s-api-service
               port:
                 number: 8080
