k8s/6-ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ui-ingress
spec:
  rules:
    - http:
          paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: k8s-ui-service
                port:
                  number: 3000
